--- a/github_repo/Projet4__ChercheStage/choix_compte_insc.html
+++ b/github_repo/Projet4__ChercheStage/choix_compte_insc.html
@@ -5,6 +5,7 @@
 	  <meta name="description" content="Postuler à une offre de stage">
       <title>Postuler à une offre - Lebonplan</title>
 	  <link rel="stylesheet" href="choix_compte_insc.css">
+      <link rel="icon" href="./logo_chap.png">
    </head> 
    <body>
     <header style="text-align: center; padding: 20px;">
@@ -60,12 +61,12 @@
                 <img src="logo_chap.png" alt="Logo gauche" class="footer-logo left">
                 <img src="logo_text.png" alt="Logo droit" class="footer-logo right">
                 <div class="footer-links">
-                    <a href="#">Cookies</a>
-                    <a href="#">F.A.Q</a>
-                    <a href="#">Conditions générales</a>
-                    <a href="#">Politique de protection des données</a>
+                    <a href="file:./coockies.html">Cookies</a>
+                    <a href="file:./faq.html">F.A.Q</a>
+                    <a href="file:./cgu.html">Conditions générales</a>
+                    <a href="file:./protection.html">Politique de protection des données</a>
                 </div>
             </div>
         </footer>
-   </body> 
-</html> 
+    </body> 
+</html>
