--- a/github_repo/Projet4__ChercheStage/index.html
+++ b/github_repo/Projet4__ChercheStage/index.html
@@ -2,36 +2,65 @@
 <html lang="fr"> 
    <head> 
       <meta charset="utf-8">
-	  <meta name="description" content="Postuler à une offre de stage">
-      <title>Postuler à une offre - Lebonplan</title>
-	  <link rel="stylesheet" href="Index.css">
-   </head> 
-   <body>
+      <meta name="description" content="Postuler à une offre de stage">
+      <title>Lebonplan</title>
+      <link rel="stylesheet" href="index.css">
+      <link rel="icon" href="./logo_chap.png">
+    </head> 
+    <body>
     <header style="text-align: center; padding: 20px;">
         <img src="file:./logo.png" alt="Logo" style="width: 500px;"> 
-      </header>
-     <header>
-		
-		<nav class="navbar"><div class="navitems"><span class="navitem active">Accueil</a></span><span class="navitem"><a href="#">Contact</a></span></div><div class="right"><div class="navitems"><span class="navitem"><a href="file:./choix_compte_conn.html">Connexion</a></span><span class="navitem"><a class="button" href="file:./choix_compte_insc.html">S'inscrire</a></span></div></div></nav>
-		<nav>
-			<ol class="breadcrumb">
-				<li class="breadcrumb-item"><a href="#">Accueil</a></li>
-			</ol>
-		</nav>
-	 </header>
-	 
-		
-        <footer class="footer">
-            <div class="footer-content">
-                <img src="logo_chap.png" alt="Logo gauche" class="footer-logo left">
-                <img src="logo_text.png" alt="Logo droit" class="footer-logo right">
-                <div class="footer-links">
-                    <a href="#">Cookies</a>
-                    <a href="#">F.A.Q</a>
-                    <a href="#">Conditions générales</a>
-                    <a href="#">Politique de protection des données</a>
-                </div>
+    </header>
+    <header>
+        <!-- Bouton Hamburger -->
+        <button class="menu-toggle" id="menu-toggle" aria-label="Ouvrir le menu">&#9776;</button>
+
+        <nav class="navbar">
+            <div class="navitems">
+                <ul class="main-menu" id="main-menu">
+                    <span class="navitem active">Accueil</span>
+                    <span class="navitem"><a href="#">Contact</a></span>
+                </ul>
             </div>
-        </footer>
+
+            <div class="right"><div class="navitems"><span class="navitem">
+                <a href="file:./choix_compte_conn.html">Connexion</a></span>
+                <span class="navitem"><a class="button" href="file:./choix_compte_insc.html">S'inscrire</a></span></div>
+            </div>
+
+        </nav>
+        <nav>
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="#">Accueil</a></li>
+                <li class="breadcrumb-item"><a href="#">Cookies</a></li>
+            </ol>
+        </nav>
+        <br>
+     </header>
+
+
+<footer class="footer">
+    <div class="footer-content">
+        <img src="logo_chap.png" alt="Logo gauche" class="footer-logo left">
+        <img src="logo_text.png" alt="Logo droit" class="footer-logo right">
+        <div class="footer-links">
+            <a href="file:./coockies.html">Cookies</a>
+            <a href="file:./faq.html">F.A.Q</a>
+            <a href="file:./cgu.html">Conditions générales</a>
+            <a href="file:./protection.html">Politique de protection des données</a>
+        </div>
+    </div>
+</footer>
+
    </body> 
-</html> 
+<script>
+    // Cibler le bouton hamburger et le menu de gauche
+    const menuToggle = document.getElementById('menu-toggle');
+    const mainMenu = document.getElementById('main-menu');
+
+    // Ajouter un événement au clic pour afficher/masquer le menu
+    menuToggle.addEventListener('click', function() {
+      mainMenu.classList.toggle('active'); // Ajouter ou retirer la classe 'active' pour ouvrir/fermer
+    });
+</script>
+</html>
