--- a/github_repo/Projet4__ChercheStage/inscription_etu.html
+++ b/github_repo/Projet4__ChercheStage/inscription_etu.html
@@ -86,6 +86,6 @@
     </footer>
 
     <!-- Lien vers le fichier JavaScript -->
-    <script src="form-validation.js"></script> 
+    <script src="inscription_etu.js"></script> 
 </body>
 </html>
