--- a/github_repo/Projet4__ChercheStage/index.html
+++ b/github_repo/Projet4__ChercheStage/index.html
@@ -12,17 +12,14 @@
         <img src="file:./logo.png" alt="Logo" style="width: 500px;"> 
     </header>
     <header>
-        <!-- Bouton Hamburger -->
         <button class="menu-toggle" id="menu-toggle" aria-label="Ouvrir le menu">&#9776;</button>
-
         <nav class="navbar">
             <div class="navitems">
-                <ul class="main-menu" id="main-menu">
-                    <span class="navitem active">Accueil</span>
+                <ul class="main-menu" id="main-menu"></ul>
+                    <span class="navitem active">Accueil</a></span>
                     <span class="navitem"><a href="#">Contact</a></span>
                 </ul>
             </div>
-
             <div class="right"><div class="navitems"><span class="navitem">
                 <a href="file:./choix_compte_conn.html">Connexion</a></span>
                 <span class="navitem"><a class="button" href="file:./choix_compte_insc.html">S'inscrire</a></span></div>
@@ -51,16 +48,16 @@
         </div>
     </div>
 </footer>
-
-   </body> 
+</body> 
 <script>
     // Cibler le bouton hamburger et le menu de gauche
-    const menuToggle = document.getElementById('menu-toggle');
-    const mainMenu = document.getElementById('main-menu');
+const menuToggle = document.getElementById('menu-toggle');
+const mainMenu = document.getElementById('main-menu');
 
-    // Ajouter un événement au clic pour afficher/masquer le menu
-    menuToggle.addEventListener('click', function() {
-      mainMenu.classList.toggle('active'); // Ajouter ou retirer la classe 'active' pour ouvrir/fermer
-    });
-</script>
+// Ajouter un événement au clic pour afficher/masquer le menu
+menuToggle.addEventListener('click', function() {
+  mainMenu.classList.toggle('active'); // Ajouter ou retirer la classe 'active' pour ouvrir/fermer
+});
+
+  </script>
 </html>
