--- a/github_repo/Projet4__ChercheStage/inscription_ent.html
+++ b/github_repo/Projet4__ChercheStage/inscription_ent.html
@@ -3,30 +3,39 @@
    <head> 
       <meta charset="utf-8">
       <meta name="description" content="Postuler à une offre de stage">
-      <title>Postuler à une offre - Lebonplan</title>
+      <title>Lebonplan</title>
       <link rel="stylesheet" href="inscription_ent.css">
       <link rel="icon" href="./logo_chap.png">
-   </head> 
-   <body>
+    </head> 
+    <body>
     <header style="text-align: center; padding: 20px;">
         <img src="file:./logo.png" alt="Logo" style="width: 500px;"> 
     </header>
     <header>
-        <nav class="navbar">
-            <div class="navitems"><span class="navitem active">Accueil</span><span class="navitem"><a href="#">Contact</a></span></div>
-            <div class="right">
-                <div class="navitems">
-                    <span class="navitem"><a href="file:./choix_compte_conn.html">Connexion</a></span>
-                    <span class="navitem"><a class="button" href="file:./choix_compte_insc.html">S'inscrire</a></span>
+        <div class="navbar">
+            <!-- Bouton hamburger -->
+            <button class="menu-toggle" id="menu-toggle" aria-label="Ouvrir le menu">&#9776;</button>
+            
+            <nav class="nav-items-container">
+                <ul class="main-menu" id="main-menu">
+                    <li class="menu-item"><a href="file:./main.HTML" class="top-level-entry active">Accueil</a></li>
+                    <li class="menu-item"><a href="file:./contact.HTML" class="top-level-entry">Contact</a></li>
+                </ul>
+
+                <!-- Liens de Connexion et S'inscrire à droite -->
+                <div class="auth-links">
+                    <a href="file:./choix_compte_conn.html" class="navitem">Connexion</a>
+                    <a href="file:./choix_compte_insc.html" class="button">S'inscrire</a>
                 </div>
-            </div>
-        </nav>
+            </nav>
+        </div>
         <nav>
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="#">Accueil</a></li>
-                <li class="breadcrumb-item"><a href="#">S'inscrire</a></li>
+                <li class="breadcrumb-item"><a href="#">Inscription</a></li>
             </ol>
         </nav>
+        <br>
      </header>
 
     <main>
