--- a/github_repo/Projet4__ChercheStage/faq.html
+++ b/github_repo/Projet4__ChercheStage/faq.html
@@ -32,7 +32,7 @@
         <nav>
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="#">Accueil</a></li>
-                <li class="breadcrumb-item"><a href="#">Connexion</a></li>
+                <li class="breadcrumb-item"><a href="#">F.A.Q.</a></li>
             </ol>
         </nav>
         <br>
