--- a/github_repo/Projet4__ChercheStage/choix_compte_insc.html
+++ b/github_repo/Projet4__ChercheStage/choix_compte_insc.html
@@ -18,7 +18,7 @@
             
             <nav class="nav-items-container">
                 <ul class="main-menu" id="main-menu">
-                    <li class="menu-item"><a href="file:./main.HTML" class="top-level-entry active">Accueil</a></li>
+                    <li class="menu-item"><a href="file:./accueil.HTML" class="top-level-entry active">Accueil</a></li>
                     <li class="menu-item"><a href="file:./contact.HTML" class="top-level-entry">Contact</a></li>
                 </ul>
 
@@ -31,8 +31,8 @@
         </div>
         <nav>
             <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="#">Accueil</a></li>
-                <li class="breadcrumb-item"><a href="#">Inscription</a></li>
+                <li class="breadcrumb-item"><a href="file:./accueil.HTML">Accueil</a></li>
+                <li class="breadcrumb-item"><a href="file:./choix_compte_insc.html">Inscription</a></li>
             </ol>
         </nav>
         <br>
