--- a/github_repo/Projet4__ChercheStage/inscription_ent.html
+++ b/github_repo/Projet4__ChercheStage/inscription_ent.html
@@ -18,7 +18,7 @@
             
             <nav class="nav-items-container">
                 <ul class="main-menu" id="main-menu">
-                    <li class="menu-item"><a href="file:./main.HTML" class="top-level-entry active">Accueil</a></li>
+                    <li class="menu-item"><a href="file:./accueil.HTML" class="top-level-entry active">Accueil</a></li>
                     <li class="menu-item"><a href="file:./contact.HTML" class="top-level-entry">Contact</a></li>
                 </ul>
 
@@ -31,8 +31,8 @@
         </div>
         <nav>
             <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="#">Accueil</a></li>
-                <li class="breadcrumb-item"><a href="#">Inscription</a></li>
+                <li class="breadcrumb-item"><a href="file:./accueil.HTML">Accueil</a></li>
+                <li class="breadcrumb-item"><a href="file:./choix_compte_insc.html">Inscription</a></li>
             </ol>
         </nav>
         <br>
@@ -62,10 +62,10 @@
                         <label>Mot de passe<br><input style="width: 99%" name="password" type="password" size="50" value="" required ></label>
                         <br><br>
                         <div class="button-container">
-                            <button type="submit">C'est parti !</button>&nbsp;<button type="reset">Réinitialiser</button>
+                            <button type="submit"><a href="file:./accueil_ent.html">C'est parti !</a></button>&nbsp;<button type="reset">Réinitialiser</button>
                         </div>
                         <br><br>
-                        <div class="small grey"><em>En cliquant sur "C'est parti !", vous acceptez les <a href="#">conditions générales</a> et déclarez avoir pris connaissance de la <a href="#">politique de protection des données</a> de notre site.</em></div>
+                        <div class="small grey"><em>En cliquant sur "C'est parti !", vous acceptez les <a href="file:./cgu.html">conditions générales</a> et déclarez avoir pris connaissance de la <a href="file:./protection.html">politique de protection des données</a> de notre site.</em></div>
                     </form>
                 </article>
             </section>
