--- a/github_repo/Projet4__ChercheStage/cgu_ent.html
+++ b/github_repo/Projet4__ChercheStage/cgu_ent.html
@@ -18,21 +18,20 @@
             
             <nav class="nav-items-container">
                 <ul class="main-menu" id="main-menu">
-                    <li class="menu-item"><a href="file:./accueil.HTML" class="top-level-entry active">Accueil</a></li>
-                    <li class="menu-item"><a href="file:./contact.HTML" class="top-level-entry">Contact</a></li>
+                    <li class="menu-item"><a href="file:./accueil_ent.HTML" class="top-level-entry active">Accueil</a></li>
+                    <li class="menu-item"><a href="file:./contact_ent.HTML" class="top-level-entry">Contact</a></li>
                 </ul>
 
                 <!-- Liens de Connexion et S'inscrire à droite -->
                 <div class="auth-links">
-                    <a href="file:./choix_compte_conn.html" class="navitem">Connexion</a>
-                    <a href="file:./choix_compte_insc.html" class="button">S'inscrire</a>
+                    <a href="file:./accueil.HTML" class="button">Déconnexion</a>
                 </div>
             </nav>
         </div>
         <nav>
             <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="file:./accueil.HTML">Accueil</a></li>
-                <li class="breadcrumb-item"><a href="file:./cgu.html">C.G.</a></li>
+                <li class="breadcrumb-item"><a href="file:./accueil_ent.HTML">Accueil</a></li>
+                <li class="breadcrumb-item"><a href="file:./cgu_ent.html">C.G.</a></li>
             </ol>
         </nav>
         <br>
@@ -60,10 +59,10 @@
         <img src="logo_chap.png" alt="Logo gauche" class="footer-logo left">
         <img src="logo_text.png" alt="Logo droit" class="footer-logo right">
         <div class="footer-links">
-            <a href="file:./coockies.html">Cookies</a>
-            <a href="file:./faq.html">F.A.Q</a>
-            <a href="file:./cgu.html">Conditions générales</a>
-            <a href="file:./protection.html">Politique de protection des données</a>
+            <a href="file:./coockies_ent.html">Cookies</a>
+            <a href="file:./faq_ent.html">F.A.Q</a>
+            <a href="file:./cgu_ent.html">Conditions générales</a>
+            <a href="file:./protection_ent.html">Politique de protection des données</a>
         </div>
     </div>
 </footer>
