--- a/github_repo/Projet4__ChercheStage/connexion_ent.html
+++ b/github_repo/Projet4__ChercheStage/connexion_ent.html
@@ -18,7 +18,7 @@
             
             <nav class="nav-items-container">
                 <ul class="main-menu" id="main-menu">
-                    <li class="menu-item"><a href="file:./main.HTML" class="top-level-entry active">Accueil</a></li>
+                    <li class="menu-item"><a href="file:./accueil.HTML" class="top-level-entry active">Accueil</a></li>
                     <li class="menu-item"><a href="file:./contact.HTML" class="top-level-entry">Contact</a></li>
                 </ul>
 
@@ -31,8 +31,8 @@
         </div>
         <nav>
             <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="#">Accueil</a></li>
-                <li class="breadcrumb-item"><a href="#">Connexion</a></li>
+                <li class="breadcrumb-item"><a href="file:./accueil.HTML">Accueil</a></li>
+                <li class="breadcrumb-item"><a href="file:./choix_compte_conn.html">Connexion</a></li>
             </ol>
         </nav>
         <br>
@@ -59,7 +59,7 @@
 						<br><br>
                         <div class="small grey"><em><a href="#">Mot de passe oublié...</a></em></div>
                         <div class="button-container">
-						    <button type="submit"><a href="#">C'est parti !</a></button>
+						    <button type="submit"><a href="fie:./accueil_ent.html">C'est parti !</a></button>
                         </div>
                         <br><br>
 						
