--- a/github_repo/Projet4__ChercheStage/postuler.html
+++ b/github_repo/Projet4__ChercheStage/postuler.html
@@ -18,22 +18,22 @@
             
             <nav class="nav-items-container">
                 <ul class="main-menu" id="main-menu">
-                    <li class="menu-item"><a href="file:./main.HTML" class="top-level-entry active">Accueil</a></li>
+                    <li class="menu-item"><a href="file:./accueil_etu.HTML" class="top-level-entry active">Accueil</a></li>
                     <li class="menu-item"><a href="file:./contact.HTML" class="top-level-entry">Contact</a></li>
-                    <li class="menu-item"><a href="#" class="top-level-entry">Profil</a></li>
-                    <li class="menu-item"><a href="#" class="top-level-entry">Offres</a></li>
+                    <li class="menu-item"><a href="file:./profil.HTML" class="top-level-entry">Profil</a></li>
+                    <li class="menu-item"><a href="file:./offre.HTML" class="top-level-entry">Offres</a></li>
                 </ul>
 
                 <!-- Liens de Connexion et S'inscrire à droite -->
                 <div class="auth-links">
-                    <a href="#" class="button">Déconnexion</a>
+                    <a href="file:./accueil.HTML" class="button">Déconnexion</a>
                 </div>
             </nav>
         </div>
         <nav>
             <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="#">Offres</a></li>
-                <li class="breadcrumb-item"><a href="#">Postuler</a></li>
+                <li class="breadcrumb-item"><a href="file:./offre.HTML">Offres</a></li>
+                <li class="breadcrumb-item"><a href="file:./postuler.HTML">Postuler</a></li>
             </ol>
         </nav>
         <br>
@@ -154,10 +154,10 @@
         <img src="logo_chap.png" alt="Logo gauche" class="footer-logo left">
         <img src="logo_text.png" alt="Logo droit" class="footer-logo right">
         <div class="footer-links">
-            <a href="file:./coockies.html">Cookies</a>
-            <a href="file:./faq.html">F.A.Q</a>
-            <a href="file:./cgu.html">Conditions générales</a>
-            <a href="file:./protection.html">Politique de protection des données</a>
+            <a href="file:./coockies_etu.html">Cookies</a>
+            <a href="file:./faq_etu.html">F.A.Q</a>
+            <a href="file:./cgu_etu.html">Conditions générales</a>
+            <a href="file:./protection_etu.html">Politique de protection des données</a>
         </div>
     </div>
 </footer>
