--- a/github_repo/Projet4__ChercheStage/accueil.html
+++ b/github_repo/Projet4__ChercheStage/accueil.html
@@ -67,7 +67,7 @@
             <p>Vous recherchez un Stage ou une Alternance ?</p>
             <h1>LeBonPlan est là pour vous aider !</h1>
             <p>Avec plus de 15 millions d’élèves inscrits et 45 000 entreprises référencées, vous trouverez forcément une annonce qui vous correspond.</p>
-            <button>Inscrivez-vous !</button>
+            <button><a style="color: #2368e1; text-decoration: none" href="file:./choix_compte_insc.html">Inscrivez-vous !</a></button>
           </div>
         </section>
       </main>
