--- a/github_repo/Projet4__ChercheStage/accueil_etu.html
+++ b/github_repo/Projet4__ChercheStage/accueil_etu.html
@@ -19,9 +19,9 @@
             <nav class="nav-items-container">
                 <ul class="main-menu" id="main-menu">
                     <li class="menu-item"><a href="file:./accueil_etu.HTML" class="top-level-entry active">Accueil</a></li>
-                    <li class="menu-item"><a href="file:./contact_ent.HTML" class="top-level-entry">Contact</a></li>
+                    <li class="menu-item"><a href="file:./contact_etu.HTML" class="top-level-entry">Contact</a></li>
                     <li class="menu-item"><a href="file:./profil.HTML" class="top-level-entry">Profil</a></li>
-                    <li class="menu-item"><a href="file:./offre_etu.HTML" class="top-level-entry">Offre</a></li>
+                    <li class="menu-item"><a href="file:./recherche_etu.HTML" class="top-level-entry">Offre</a></li>
                 </ul>
 
                 <!-- Liens de Connexion et S'inscrire à droite -->
@@ -44,19 +44,19 @@
           <div class="jobs-grid">
             <article class="job-card">
               <h3>Technicien en électricité - Stage 8 semaines</h3>
-              <a href="#" class="job-link">En savoir plus</a>
+              <a href="file:./postuler.HTML" class="job-link">En savoir plus</a>
             </article>
             <article class="job-card">
               <h3>Boulanger patissier - Alternance 2 ans</h3>
-              <a href="#" class="job-link">En savoir plus</a>
+              <a href="file:./postuler.HTML" class="job-link">En savoir plus</a>
             </article>
             <article class="job-card">
               <h3>Développeur Web - Stage 6 mois</h3>
-              <a href="#" class="job-link">En savoir plus</a>
+              <a href="file:./postuler.HTML" class="job-link">En savoir plus</a>
             </article>
             <article class="job-card">
               <h3>Graphiste - Alternance 1 an</h3>
-              <a href="#" class="job-link">En savoir plus</a>
+              <a href="file:./postuler.HTML" class="job-link">En savoir plus</a>
             </article>
           </div>
         </section>
@@ -67,7 +67,6 @@
             <p>Vous recherchez un Stage ou une Alternance ?</p>
             <h1>LeBonPlan est là pour vous aider !</h1>
             <p>Avec plus de 15 millions d’élèves inscrits et 45 000 entreprises référencées, vous trouverez forcément une annonce qui vous correspond.</p>
-            <button>Inscrivez-vous !</button>
           </div>
         </section>
       </main>
