--- a/github_repo/Projet4__ChercheStage/cgu_ent.html
+++ b/github_repo/Projet4__ChercheStage/cgu_ent.html
@@ -20,6 +20,8 @@
                 <ul class="main-menu" id="main-menu">
                     <li class="menu-item"><a href="file:./accueil_ent.HTML" class="top-level-entry active">Accueil</a></li>
                     <li class="menu-item"><a href="file:./contact_ent.HTML" class="top-level-entry">Contact</a></li>
+                    <li class="menu-item"><a href="file:./entreprise.html" class="top-level-entry">Entreprise</a></li>
+                    <li class="menu-item"><a href="file:./offre_ent.html" class="top-level-entry">Offre</a></li>
                 </ul>
 
                 <!-- Liens de Connexion et S'inscrire à droite -->
