--- a/github_repo/Projet4__ChercheStage/choix_compte_insc.html
+++ b/github_repo/Projet4__ChercheStage/choix_compte_insc.html
@@ -59,7 +59,7 @@
                             <br><br>
                             <button type="submit"><a href="file:./inscription_ent.html">Compte entreprise</a></button>
                             <br><br>
-                            <button type="submit"><a href="file:./inscription_etu.html">Compte pilote</a></button>
+                            <button type="submit"><a href="file:./inscription_pil.html">Compte pilote</a></button>
                             <br><br>
                         </div>
                         <br><br>
