--- a/github_repo/Projet4__ChercheStage/connexion_ent.html
+++ b/github_repo/Projet4__ChercheStage/connexion_ent.html
@@ -59,7 +59,7 @@
 						<br><br>
                         <div class="small grey"><em><a href="#">Mot de passe oublié...</a></em></div>
                         <div class="button-container">
-						    <button type="submit"><a href="fie:./accueil_ent.html">C'est parti !</a></button>
+						    <button type="submit"><a href="file:./accueil_ent.html">C'est parti !</a></button>
                         </div>
                         <br><br>
 						
