--- a/github_repo/Projet4__ChercheStage/contact.html
+++ b/github_repo/Projet4__ChercheStage/contact.html
@@ -18,14 +18,14 @@
             
             <nav class="nav-items-container">
                 <ul class="main-menu" id="main-menu">
-                    <li class="menu-item"><a href="file:./accueil.HTML" class="top-level-entry active">Accueil</a></li>
-                    <li class="menu-item"><a href="file:./contact.HTML" class="top-level-entry">Contact</a></li>
+                    <li class="menu-item"><a href="file:./accueil.HTML" class="top-level-entry ">Accueil</a></li>
+                    <li class="menu-item"><a href="file:./contact.HTML" class="top-level-entry active">Contact</a></li>
                 </ul>
 
                 <!-- Liens de Connexion et S'inscrire à droite -->
                 <div class="auth-links">
                     <a href="file:./choix_compte_conn.html" class="navitem">Connexion</a>
-                    <a href="file:./choix_compte_insc.html" class="button">F.A.Q.</a>
+                    <a href="file:./choix_compte_insc.html" class="button">S'inscrire</a>
                 </div>
             </nav>
         </div>
