--- a/github_repo/Projet4__ChercheStage/creer_offre.html
+++ b/github_repo/Projet4__ChercheStage/creer_offre.html
@@ -18,8 +18,10 @@
             
             <nav class="nav-items-container">
                 <ul class="main-menu" id="main-menu">
-                    <li class="menu-item"><a href="file:./accueil_ent.HTML" class="top-level-entry active">Accueil</a></li>
+                    <li class="menu-item"><a href="file:./accueil_ent.HTML" class="top-level-entry ">Accueil</a></li>
                     <li class="menu-item"><a href="file:./contact_ent.HTML" class="top-level-entry">Contact</a></li>
+                    <li class="menu-item"><a href="file:./entreprise.html" class="top-level-entry">Entreprise</a></li>
+                    <li class="menu-item"><a href="file:./offre_ent.html" class="top-level-entry active">Offre</a></li>
                 </ul>
 
                 <!-- Liens de Connexion et S'inscrire à droite -->
@@ -30,7 +32,7 @@
         </div>
         <nav>
             <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="file:./accueil_ent.HTML">Accueil</a></li>
+                <li class="breadcrumb-item"><a href="file:./offre_ent.HTML">Offre</a></li>
                 <li class="breadcrumb-item"><a href="file:./creer_offre.HTML">Créer un offre</a></li>
             </ol>
         </nav>
