--- a/github_repo/Projet4__ChercheStage/contact_etu.html
+++ b/github_repo/Projet4__ChercheStage/contact_etu.html
@@ -18,8 +18,10 @@
             
             <nav class="nav-items-container">
                 <ul class="main-menu" id="main-menu">
-                    <li class="menu-item"><a href="file:./accueil_etu.HTML" class="top-level-entry active">Accueil</a></li>
-                    <li class="menu-item"><a href="file:./contact_etu.HTML" class="top-level-entry">Contact</a></li>
+                    <li class="menu-item"><a href="file:./accueil_etu.HTML" class="top-level-entry ">Accueil</a></li>
+                    <li class="menu-item"><a href="file:./contact_etu.HTML" class="top-level-entry active">Contact</a></li>
+                    <li class="menu-item"><a href="file:./profil.HTML" class="top-level-entry">Profil</a></li>
+                    <li class="menu-item"><a href="file:./recherche_etu.HTML" class="top-level-entry">Offre</a></li>
                 </ul>
 
                 <!-- Liens de Connexion et S'inscrire à droite -->
@@ -30,7 +32,6 @@
         </div>
         <nav>
             <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="file:./accueil_etu.HTML">Accueil</a></li>
                 <li class="breadcrumb-item"><a href="file:./contact_etu.html">Contact</a></li>
             </ol>
         </nav>
