--- a/github_repo/Projet4__ChercheStage/protection_etu.html
+++ b/github_repo/Projet4__ChercheStage/protection_etu.html
@@ -20,6 +20,8 @@
                 <ul class="main-menu" id="main-menu">
                     <li class="menu-item"><a href="file:./accueil_etu.HTML" class="top-level-entry active">Accueil</a></li>
                     <li class="menu-item"><a href="file:./contact_etu.HTML" class="top-level-entry">Contact</a></li>
+                    <li class="menu-item"><a href="file:./profil.HTML" class="top-level-entry">Profil</a></li>
+                    <li class="menu-item"><a href="file:./offre_etu.HTML" class="top-level-entry">Offre</a></li>
                 </ul>
 
                 <!-- Liens de Connexion et S'inscrire à droite -->
