--- a/entreprises_statistiques.html
+++ b/entreprises_statistiques.html
@@ -66,11 +66,30 @@
     </div>
 </div>
 
-<footer>
-    <p>
-        <a href="#">Cookies</a> | <a href="#">F.A.Q</a>
-    </p>
-    <p>&copy; LeBonplan</p>
+<footer class="footer">
+    <div class="footer-content">
+        <img src="logo_chap.png" alt="Logo gauche" class="footer-logo left">
+        <img src="logo_text.png" alt="Logo droit" class="footer-logo right">
+        <div class="footer-links">
+            <a href="file:./coockies.html">Cookies</a>
+            <a href="file:./faq.html">F.A.Q</a>
+            <a href="file:./cgu.html">Conditions générales</a>
+            <a href="file:./protection.html">Politique de protection des données</a>
+        </div>
+    </div>
 </footer>
+</body> 
+<script>
+    // Cibler le bouton hamburger et le menu de gauche
+const menuToggle = document.getElementById('menu-toggle');
+const mainMenu = document.getElementById('main-menu');
+
+// Ajouter un événement au clic pour afficher/masquer le menu
+menuToggle.addEventListener('click', function() {
+  mainMenu.classList.toggle('active'); // Ajouter ou retirer la classe 'active' pour ouvrir/fermer
+});
+
+  </script>
+</html>
 </body>
 </html>
