--- a/github_repo/Projet4__ChercheStage/offre_ent.html
+++ b/github_repo/Projet4__ChercheStage/offre_ent.html
@@ -45,16 +45,16 @@
           <div class="offer-container">
             <h3>Nom de l'offre 1 H/F</h3>
             <p>Description de l'offre...</p>
-            <button class="btn-delete">Supprimer</button>
-              <button class="btn-stats">stats</button>
-              <button class="btn-view">Voir candidature</button>
+            <button class="btn-delete"><a href="#">Supprimer</a></button>
+            <button class="btn-stats"><a href="file:./stat_ent.html">stats</a></button>
+            <button class="btn-view"><a href="file:./candidature_ent.html">Voir candidature</a></button>
           </div>
           <div class="offer-container">
               <h3>Nom de l'offre 2 H/F</h3>
               <p>Description de l'offre...</p>
-              <button class="btn-delete">Supprimer</button>
-              <button class="btn-stats">stats</button>
-              <button class="btn-view">Voir candidature</button>
+              <button class="btn-delete"><a href="#">Supprimer</a></button>
+              <button class="btn-stats"><a href="file:./stat_ent.html">stats</a></button>
+              <button class="btn-view"><a href="file:./candidature_ent.html">Voir candidature</a></button>
           </div>
       </main>
       <footer class="footer">
@@ -66,9 +66,23 @@
                 <a href="file:./faq.html">F.A.Q</a>
                 <a href="file:./cgu.html">Conditions générales</a>
                 <a href="file:./protection.html">Politique de protection des données</a>
+                <br> <br> 
+                <a  style='color:#ffffff; text-align :center;'   href="https://www.google.fr/maps/place/Campus+CESI/@43.5792319,3.9432547,794m/data=!3m2!1e3!4b1!4m6!3m5!1s0x12b6afdaa52cccbf:0xa4dd1993e0746bd!8m2!3d43.5792281!4d3.9481256!16s%2Fg%2F1v202y6s?entry=ttu&g_ep=EgoyMDI1MDIwMi4wIKXMDSoASAFQAw%3D%3D">Immeuble Le Quatrième Zone Aéroportuaire de Montpellier Méditerranée, 34130 Mauguio</a>
             </div>
-        </div>
-    </footer>
+  
+  
+      <br><br><br><br>
+          <div class="rounded-social-buttons">
+          <a class="social-button twitter" href="https://x.com/cesi_officiel?s=21" target="_blank"><i class="fa-brands fa-twitter">
+            <img class="twitter" 
+                        src="file:./Twitter.png"></i></a>
+            <a class="social-button tiktok" href=" https://www.tiktok.com/@bde_cesi_mtp?_t=ZN-8tezCXXQ3tO&_r=1" target="_blank"><i class="fa-brands fa-tiktok">
+                    <img class="TikTok" 
+                        src="file:./tiktok.png"></i></a>
+            <a class="social-button instagram" href=" https://www.instagram.com/bde.cesi.montpellier?igsh=MWVhaWFvNGNvcDZuNw==" target="_blank"><i class="fa-brands fa-instagram">
+            <img class="instagram" 
+                        src="file:./instagram.png"></i></a>
+      </footer>
     </body> 
     <script>
         // Cibler le bouton hamburger et le menu de gauche
