--- a/github_repo/Projet4__ChercheStage/stat_ent.html
+++ b/github_repo/Projet4__ChercheStage/stat_ent.html
@@ -100,7 +100,7 @@
       <h3>Coordonnées</h3>
       <a  style='color:#ffffff'href="https://www.google.fr/maps/place/Campus+CESI/@43.5792319,3.9432547,794m/data=!3m2!1e3!4b1!4m6!3m5!1s0x12b6afdaa52cccbf:0xa4dd1993e0746bd!8m2!3d43.5792281!4d3.9481256!16s%2Fg%2F1v202y6s?entry=ttu&g_ep=EgoyMDI1MDIwMi4wIKXMDSoASAFQAw%3D%3D">Immeuble Le Quatrième Zone Aéroportuaire de Montpellier Méditerranée, 34130 Mauguio</a>
       <p><i class="fa-solid fa-envelope"></i> contact@cesi.fr</p>
-      <p><i class="fa-solid fa-phone"></i> 01 23 45 67 89</p>
+      <p><i class="fa-solid fa-phone"></i> +33 6 12 34 56 78</p>
     </div>
 
     <!-- Colonne 3 : Navigation -->
