--- a/github_repo/Projet4__ChercheStage/mentions_legales.html
+++ b/github_repo/Projet4__ChercheStage/mentions_legales.html
@@ -42,19 +42,17 @@
             <h1>Mentions Légales</h1>
 
             <h2>1. Informations légales</h2>
-            <p>Le site <strong>votre-site.com</strong> est édité par la société <strong>Nom de la société</strong>, immatriculée au Registre du Commerce et des Sociétés sous le numéro <strong>RCS N°</strong>.</p>
-            <p>Directeur de la publication : <strong>Nom du responsable</strong>, <strong>fonction</strong>.</p>
-            <p>Adresse : <strong>Adresse complète de l'entreprise</strong>.</p>
+            <p>Le site <strong>lebonplan.com</strong> est édité par<strong> CESI </strong>.</p>
+            <p>Direction de la publication : <strong>CPI</strong>, <strong>A2</strong>.</p>
+            <p>Adresse : <strong>Immeuble Le Quatrième Zone Aéroportuaire de Montpellier Méditerranée, 34130 Mauguio FRANCE</strong>.</p>
             <p>Téléphone : <strong>+33 1 23 45 67 89</strong></p>
             <p>Email : <a href="mailto:contact@votre-site.com">contact@votre-site.com</a></p>
 
             <h2>2. Hébergement</h2>
-            <p>Le site est hébergé par <strong>Nom de l'hébergeur</strong>, situé à l'adresse suivante :</p>
-            <p><strong>Adresse de l'hébergeur</strong></p>
-            <p>Téléphone : <strong>+33 1 23 45 67 89</strong></p>
-
+            <p>Le site est hébergé par <strong>Nous Même</strong>.</p>
+            
             <h2>3. Propriété intellectuelle</h2>
-            <p>Le contenu du site, y compris les textes, images, vidéos, logos, icônes, et autres éléments, est la propriété exclusive de <strong>Nom de la société</strong>, ou de ses partenaires. Toute reproduction ou distribution, même partielle, sans autorisation est interdite.</p>
+            <p>Le contenu du site, y compris les textes, images, vidéos, logos, icônes, et autres éléments, est la propriété exclusive de <strong>CESI</strong>, ou de ses partenaires. Toute reproduction ou distribution, même partielle, sans autorisation est interdite.</p>
 
             <h2>4. Données personnelles</h2>
             <p>Conformément à la loi Informatique et Libertés du 6 janvier 1978, vous disposez d’un droit d’accès, de rectification, et de suppression des données vous concernant. Pour exercer ce droit, contactez-nous par email à l'adresse suivante : <a href="mailto:contact@votre-site.com">contact@votre-site.com</a>.</p>
@@ -63,7 +61,7 @@
             <p>Le site utilise des cookies pour améliorer votre expérience de navigation. Vous pouvez à tout moment désactiver les cookies dans les paramètres de votre navigateur, mais cela pourrait affecter le fonctionnement du site.</p>
 
             <h2>6. Responsabilité</h2>
-            <p>Le site <strong>votre-site.com</strong> ne saurait être tenu responsable des dommages directs ou indirects résultant de l’utilisation du site ou de l’impossibilité d’y accéder, ainsi que de tout autre problème technique ou logiciel lié à l’utilisation d’Internet.</p>
+            <p>Le site <strong>lebonplan.com</strong> ne saurait être tenu responsable des dommages directs ou indirects résultant de l’utilisation du site ou de l’impossibilité d’y accéder, ainsi que de tout autre problème technique ou logiciel lié à l’utilisation d’Internet.</p>
 
             <h2>7. Modifications des mentions légales</h2>
             <p>Nous nous réservons le droit de modifier ces mentions légales à tout moment. Nous vous conseillons de consulter régulièrement cette page pour prendre connaissance des dernières informations.</p>
@@ -83,7 +81,7 @@
         <h3>Coordonnées</h3>
         <a  style='color:#ffffff'href="https://www.google.fr/maps/place/Campus+CESI/@43.5792319,3.9432547,794m/data=!3m2!1e3!4b1!4m6!3m5!1s0x12b6afdaa52cccbf:0xa4dd1993e0746bd!8m2!3d43.5792281!4d3.9481256!16s%2Fg%2F1v202y6s?entry=ttu&g_ep=EgoyMDI1MDIwMi4wIKXMDSoASAFQAw%3D%3D">Immeuble Le Quatrième Zone Aéroportuaire de Montpellier Méditerranée, 34130 Mauguio</a>
         <p><i class="fa-solid fa-envelope"></i> contact@cesi.fr</p>
-        <p><i class="fa-solid fa-phone"></i> 01 23 45 67 89</p>
+        <p><i class="fa-solid fa-phone"></i> +33 6 12 34 56 78</p>
       </div>
   
       <!-- Colonne 3 : Navigation -->
