--- a/github_repo/offre_ent.html
+++ b/github_repo/offre_ent.html
@@ -4,7 +4,7 @@
       <meta charset="utf-8">
       <meta name="description" content="Postuler à une offre de stage">
       <title>Lebonplan</title>
-      <link rel="stylesheet" href="offre.css">
+      <link rel="stylesheet" href="offre_ent.css">
       <link rel="icon" href="./logo_chap.png">
     </head> 
     <body>
